Wed Jul 04 17:44:59 BST 2007  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Update for ValueRangeProcessor classes.

Wed Jul 04 17:42:34 BST 2007  Olly Betts <olly@survex.com>

	* php/util.i: Rename the ValueRangeProcessor subclasses and
	  TermGenerator to have a Xapian prefix for PHP4.

Wed Jul 04 17:41:36 BST 2007  Olly Betts <olly@survex.com>

	* xapian-bindings.spec.in: Don't mention %makeinstall in a comment as
	  that makes RPM explode.  Add in a missing "mv" for installing tcl8
	  documentation.

Wed Jul 04 17:39:26 BST 2007  Olly Betts <olly@survex.com>

	* INSTALL: Remove documentation of the "phpextdir" and "pylibdir" ways
	  of installing a local copy - setting PHP_EXTENSION_DIR or PYTHON_LIB
	  at configure time is a better solution.

Wed Jun 27 14:16:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Updated.

Wed Jun 27 14:15:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/pythontest.py: Add tests of the Database.spellings()
	  iterator.

Wed Jun 27 14:13:09 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Updated.

Tue Jun 26 17:34:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i,xapian.i: Add support for spellings_begin(), and
	  add a python-specific term iterator for it, accessed as
	  Database.spellings()

Tue Jun 26 00:56:03 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Fix for document.h wrapping.

Tue Jun 26 00:01:38 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Parse xapian/postingiterator.h directly.

Mon Jun 25 23:21:45 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Parse xapian/document.h directly.

Mon Jun 25 18:07:36 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Use "%include <xapian/queryparser.h>" to wrap
	  Xapian::QueryParser, etc.  This adds FLAG_SYNONYM and updates
	  FLAG_MULTIWORD_SYNONYMS.

Sat Jun 23 19:02:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>
