@@ -1,3 +1,7 @@
+Wed Jul 04 17:48:38 BST 2007  Olly Betts <olly@survex.com>
+
+	* php/Makefile.am: Install xapian.php.
+
 Wed Jul 04 17:44:59 BST 2007  Olly Betts <olly@survex.com>
 
 	* java-swig/Makefile.am: Update for ValueRangeProcessor classes.
